--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Árbol de recubrimiento mínimo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
     </head>
     <body>
 
@@ -52,10 +53,8 @@
             </form>
         </div>
 
-        <div class="container-md">
-            <canvas id="canvas" width="1000" height="1000" class="bg-light">
-                
-            </canvas>
+        <div class="container-md" id="svg-container">
+
         </div>
 
         <script src="./index.js"></script>
